# SKKU_Autonomous_Driving_2024

./: .gitignore  .gitignore.swp  2024-07-28-194218_lidar.json  480_test.py  CITATION.cff  DRIVE_UI.py  README.md  avoid_testor.py  calib_test.py  camera_writer.py  com_node.py  inference.py  inference_test.py  lidar_a.py  lidar_process.py  lidar_publisher.py  lidar_subscriber.py  new_driving.py  param_20240711.txt  params.txt  params_2.txt  params_sub.txt  requirements.txt  sensor_publisher.py  serial_testor.py  steering_analyze.py
ros_node/my_custom_msgs/: CMakeLists.txt  package_3.xml
ros_node/my_custom_msgs/install/: local_setup.sh  setup.sh
ros_node/my_custom_msgs/install/my_custom_msgs/include/my_custom_msgs/msg/: lidar_data.h  lidar_data.hpp  lidar_datas.h  lidar_datas.hpp
ros_node/my_custom_msgs/install/my_custom_msgs/share/my_custom_msgs/: package.dsv  package.ps1  package.sh
ros_node/my_custom_msgs/install/my_custom_msgs/share/my_custom_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  my_custom_msgs__rosidl_generator_cppExport.cmake  my_custom_msgs__rosidl_typesupport_cExport-noconfig.cmake  my_custom_msgs__rosidl_typesupport_cExport.cmake  my_custom_msgs__rosidl_typesupport_cppExport-noconfig.cmake  my_custom_msgs__rosidl_typesupport_cppExport.cmake  my_custom_msgs__rosidl_typesupport_introspection_cExport.cmake  my_custom_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
ros_node/my_custom_msgs/install/my_custom_msgs/share/my_custom_msgs/msg/: LidarDatas.idl  (+1 more)
ros_node/my_custom_msgs/msg/: LidarData.msg
(+67 files in other folders)
